[package]
name = "krusty_slam"
version = "0.1.0"
authors = ["captaintrunky <captaintrunky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"
nalgebra-glm = "0.5.0"
image = "0.22.3"
imageproc = "0.19.2"
yaml-rust = "0.4.3"
